src/test/deca/codegen/valid/method_call_simple_print.deca
// Test codegen, call a method with a print

class Printer {
    void testMethod() {
        println("Bonjour");
    }
}

{
    Printer printer = new Printer();
    printer.testMethod();
}