src/test/deca/codegen/invalid/cast_on_void.deca
// Test cast on void, 3.39

class A {
    void display(){
        print("");
    }
}

{
    A a = new A();
    int entier = (int) (a.display()); 
}